gfx/layers/wr/WebRenderScrollData.h
@@ -74,6 +74,8 @@ class WebRenderLayerScrollData final {
     mTransformIsPerspective = aTransformIsPerspective;
   }
   bool GetTransformIsPerspective() const { return mTransformIsPerspective; }
+  void SetResolution(float aResolution) { mResolution = aResolution; }
+  float GetResolution() const { return mResolution; }
 
   EventRegions GetEventRegions() const { return EventRegions(); }
   void SetEventRegionsOverride(const EventRegionsOverride& aOverride) {
@@ -185,6 +187,7 @@ class WebRenderLayerScrollData final {
   gfx::Matrix4x4 mAncestorTransform;
   gfx::Matrix4x4 mTransform;
   bool mTransformIsPerspective;
+  float mResolution;
   LayerIntRegion mVisibleRegion;
   // The remote documents only need their size because their origin is always
   // (0, 0).
