gfx/layers/wr/WebRenderScrollDataWrapper.h
@@ -212,7 +212,9 @@ class MOZ_STACK_CLASS WebRenderScrollDataWrapper final {
 
     gfx::Matrix4x4 transform;
     if (AtTopLayer()) {
-      transform = mLayer->GetAncestorTransform();
+      float resolution = mLayer->GetResolution();
+      transform = mLayer->GetAncestorTransform() *
+                  gfx::Matrix4x4::Scaling(resolution, resolution, 1.f);
     }
     if (AtBottomLayer()) {
       transform = mLayer->GetTransform() * transform;
