layout/generic/nsSubDocumentFrame.cpp
@@ -1423,7 +1423,6 @@ bool nsDisplayRemote::UpdateScrollData(
 
   if (aLayerData) {
     aLayerData->SetReferentId(mLayersId);
-    Matrix4x4 m = Matrix4x4::Translation(mOffset.x, mOffset.y, 0.0);
 
     // Apply the top level resolution if we are in the same process of the top
     // level document. We don't need to apply it in cases where we are in OOP
@@ -1434,9 +1433,10 @@ bool nsDisplayRemote::UpdateScrollData(
     if (inProcessRootContext &&
         inProcessRootContext->IsRootContentDocumentCrossProcess()) {
       float resolution = inProcessRootContext->PresShell()->GetResolution();
-      m.PostScale(resolution, resolution, 1.0);
+      aLayerData->SetResolution(resolution);
     }
 
+    Matrix4x4 m = Matrix4x4::Translation(mOffset.x, mOffset.y, 0.0);
     aLayerData->SetTransform(m);
     aLayerData->SetEventRegionsOverride(mEventRegionsOverride);
     aLayerData->SetRemoteDocumentSize(GetFrameSize(mFrame));
